--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
-    <title>React App</title>
+    <title>SkinCare</title>
   </head>
   <body class="scrollbar-thin scrollbar-thumb-blue-500 scrollbar-track-slate-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
